# miniRL

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  conftest.py  pyproject.toml
docs/: agentic_rl.md  async_tier2.md  async_training.md  box_runbook.md  config.md  ddp.md  fast_rl.md  fsdp2.md  megatron.md  packing.md  precision.md
minirl/: async_controller.py  config.py  eval.py  fully_async.py  logging.py  megatron.py  metrics.py  vllm_engine.py
minirl/algos/: README.md  __init__.py  advantage.py  aggregate.py  cispo.py  dapo.py  grpo.py  gspo.py  sft.py  tis.py
minirl/controllers/: __init__.py  fully_async.py  streaming.py
minirl/data/: __init__.py  chat.py  prompts.py  sft.py
minirl/engine/: __init__.py  hf_engine.py  stream_adapter.py  vllm_engine.py
minirl/rewards/: __init__.py  code.py  math.py
minirl/rollout/: batching.py  filtering.py  packing.py  sampling.py  streaming.py  types.py
minirl/train/: __init__.py  distributed.py  trainer.py
notes/: README.md  dpo_derivation.md  grpo_to_gspo_derivation.md  kl_estimators.md  pg_to_ppo_derivation.md  ppo_to_cispo_derivation.md  ppo_to_grpo_derivation.md
recipes/: 03_grpo_gsm8k.py  04_smoke_vllm_cuda.py  05_grpo_gsm8k_cuda.py  08_megatron_p1_parity.py  09_grpo_dolci_code_cuda.py
tests/: fake_trainer.py  test_algos.py  test_async_controller.py  test_data.py  test_distributed.py  test_eval.py  test_fully_async.py  test_hf_engine.py  test_logging.py  test_metrics.py  test_packing.py  test_rewards.py  test_sampling.py  test_streaming.py  test_train_async.py  test_trainer.py
